plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id "jacoco"
    id "org.sonarqube" version "3.5.0.2730"
}

jacocoTestReport {
    dependsOn test // report가 만들어지기 전 Test 실행
    reports {
        xml.required = true
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}


group = 'today.sesac'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    springAiVersion = "1.0.0"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring AI Vertex AI Gemini
    implementation platform("org.springframework.ai:spring-ai-bom:$springAiVersion")
    implementation 'org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini'

    // Spring Cloud AWS
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // 테스트가 끝난 후 JaCoCo 리포트 생성

    // gradle로 test를 실행할 때 .env 파일에 정의된 환경변수를 읽어와서 테스트 환경에 적용
    def envFile = file('.env')
    if (envFile.exists()) {
        envFile.eachLine { line ->
            if (line.trim() && !line.startsWith('#')) {
                def (key, value) = line.split('=', 2)
                if (key && value) {
                    // 환경 변수 설정
                    environment key, value.trim()
                }
            }
            return true // continue reading lines
        }
    }
}